welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for compteurtour(<-1 to 7) {
  avance()
  avance()
  avance()
  avance()
  gauche()
  avance()
  avance()
  droite()
  avance()
  avance()
  avance()
  avance()
  droite()
  avance()
  gauche()
  avance()
  avance()
  avance()
  avance()
  gauche()
  
}